# tvmer

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/yolov8/: main.py
tvmer/: __main__.py  utils.py
