[tool.pdm]

[project]
name = "tvmer"
version = "0.1.0"
description = ""
authors = [
    {name = "zrr1999", email = "2742392377@qq.com"},
]
dependencies = [
    "typer",
    "rich",
    "apache-tvm"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
